--- a/Módulo2-Desafio1/assets/css/style.css
+++ b/Módulo2-Desafio1/assets/css/style.css
@@ -41,7 +41,7 @@ body {
 
 .header {
     min-height: 220px;
-    background: url(/assets/img/header.jpg);
+    background: url(../img/header.jpg);
     background-size: cover;
 }
 
