--- a/Módulo2-Desafio1/assets/css/style.css
+++ b/Módulo2-Desafio1/assets/css/style.css
@@ -41,26 +41,26 @@ body {
 
 .header {
     min-height: 220px;
-    background: url(/assets/img/header.jpg);
+    background: url(../img/header.jpg);
     background-size: cover;
 }
 
 .headersobre {
     min-height: 220px;
-    background: url(/../assets/img/clinica.jpg);
+    background: url(../img/clinica.jpg);
     background-size: cover;
     background-position: center;
 }
 
 .headeratendimento {
     min-height: 220px;
-    background: url(/../assets/img/atendimento.jpg);
+    background: url(../img/atendimento.jpg);
     background-size: cover;
     background-position: center;
 }
 .headercontato {
     min-height: 220px;
-    background: url(/../assets/img/contato.jpg);
+    background: url(../img/contato.jpg);
     background-size: cover;
     background-position: center;
 }
